# PolyORB

./: .cvsignore  .dockerignore  .gitignore  .gitlab-ci.plan  .gitlab-ci.yml  .gitreview  .mcp.json  ADR-001-Microservices-Architecture.md  ADR-002-API-Security-Authentication.md  ADR-004-Test-Framework-Strategy.md  ADR-TEMPLATE.md  ANNOUNCE  AUTHORS  AX_TASK_IMPORT.md  Ada_Language_Expert.md  BUILD_STATUS_UPDATE.md  CI-CD-SETUP-GUIDE.md  CI_CD_SETUP.md  COPYING.RUNTIME  ChangeLog  DEPLOYMENT_CHECKLIST.md  DOCKER_README.md  DOMAIN-EXPERT-CONSULTATION-GUIDE.md  DevOps_Engineer.md  Dockerfile  FEATURES  GNAT_INSTALLATION_MACOS.md  GNAT_INSTALLATION_STATUS.md  GNUmakefile  HISTORY  IMPLEMENTATION_STATUS.md  INSTALL  Implementation_Coordinator.md  K8S_DEPLOYMENT_README.md  MANIFEST  Makefile  Makefile.am  Makefile.common  Makefile.common.in  Makefile.common.project.in  (+79 more)
Examples/Bank/: Makefile.am  Makefile.in  README  alarm.ads  bank.adb  client.adb  manager.adb  message.adb  message.ads  notify.ads  server.adb  server.ads  simcity.cfg
Examples/Filters/: Makefile.am  Makefile.in  README  filters.cfg  prime_1.adb  prime_1.ads  prime_2.adb  prime_2.ads  prime_3.adb  prime_3.ads  s-gafido.adb  s-gafido.ads  s-gafire.adb  s-gafire.ads  s-gafish.adb  s-gafish.ads
Examples/LightBank/: Makefile.am  Makefile.in  README  bank.adb  bank.ads  client.adb  simcity.cfg
Examples/MultiSto/: Makefile.am  Makefile.in  README  main.adb  multisto.cfg  rci.adb  rci.ads  sp1.ads  sp2.ads  sp3.ads  types.adb  types.ads
Examples/Prime/: .gdbinit  .gitignore  Makefile.am  Makefile.in  master.adb  master51.cfg.in  prime_1.adb  prime_1.ads  prime_2.adb  prime_2.ads  prime_3.adb  prime_3.ads  prime_4.adb  prime_4.ads  types.ads
Examples/RACW/: .gitignore  Makefile.am  Makefile.in  README  common.ads  (+7 more)
Garlic/: .cvsignore  .gitignore  2agtplsp.ads  2egtplsp.ads  2ggtplsp.ads  2hgtplsp.ads  2lgtplsp.ads  2sgtplsp.ads  2ugtplsp.ads  2wgarcon.ads  2wgtplsp.ads  2xgtplsp.ads  5agtplsp.ads  5bgtplsp.ads  5egarrem.adb  5egarsoc.adb  5egasose.adb  5egtplsp.ads  5ggtplsp.ads  5hgarcon.ads  5hgtplsp.ads  5lgarcon.ads  5lgarthi.ads  5lgtplsp.ads  5pgtplsp.adb  5pgtplsp.ads  5sgarcon.ads  5sgtplsp.ads  5ugtplsp.ads  5wgarcon.ads  5wgarrem.adb  5wgarthi.adb  5wgarthi.ads  5wgtplsp.adb  5wgtplsp.ads  5xgtplsp.ads  ChangeLog  DALL  DALL.el  DALL.rc  (+171 more)
broca/: GNUmakefile  INSTALL  MANIFEST  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  adasockets.diffs  configure  configure.in  dir.mk
doc/: Ada_Distributed_Systems_Annex_(DSA).rst  Building_an_application_with_PolyORB.rst  CODING_GUIDELINES  CONTRIBUTING  CORBA.rst  Conformance.rst  DEMO.PLAN  DII.tex  GIOP.rst  GNUmakefile  INSTALL.ENST  Installation.rst  Introduction_to_PolyORB.rst  MOMA.rst  Makefile  Makefile.am  Makefile.in  Makefile.local  Makefile.polyorb_doc  NOTES  Overview_of_PolyORB_personalities.rst  PROBLEM-REPORT-FORM  Performance.rst  README.droopi-jonathan  RT-CORBA.rst  References.rst  SOAP.rst  Tasking_model_in_PolyORB.rst  Tools.rst  ab_names.1  arch.tex  architecture.tex  client-server_model.eps  client.fig  compilateur.fig  conclusion-1.fig  conclusion-2.fig  conclusion-3.fig  conf.py  conversion.fig  (+45 more)
docs/: CODING_GUIDELINES  MANIFEST.figures  Makefile.am  Makefile.in  OMG_TAGS  PROBLEM-REPORT-FORM  client.adb  echo-impl-body.adb  echo-impl-spec.ads  iac.1  idl.kw  idlac.1  myconfig.cfg  polyorb-config.1  polyorb_dg.texi  polyorb_gps.xml  polyorb_ug.bib  polyorb_ug.texi  polyorb_ug_ref.tex  polyorb_version.texi.in  server.adb  svn.texi  texinfo.bst  xe-arch.fig
examples/: GNUmakefile  Makefile.am  Makefile.common  README  adabroker.opt  corba-test_object.adb  corba-test_object.ads  dir.mk  dynclient.adb  echo-impl.adb  echo.adb  echo.ads  polyorb-setup-test.adb  polyorb-setup-test.ads  polyorb-setup-test_corba.adb  polyorb-test-no_tasking.adb  polyorb-test-no_tasking_poa.adb  polyorb-test-thread_pool.adb  polyorb-test-thread_pool_poa.adb  polyorb-test_object.adb  polyorb-test_object.ads  report.adb
idlac/: .cvsignore  Makefile  Makefile.am  Makefile.in  README.Expansion  TODO  ada_be-constants.ads  ada_be-debug.adb  ada_be-debug.ads  ada_be-expansion-types.adb  ada_be-expansion-types.ads  ada_be-expansion.adb  ada_be-expansion.ads  ada_be-identifiers.adb  ada_be-identifiers.ads  ada_be-idl2ada-helper.adb  ada_be-idl2ada-helper.ads  ada_be-idl2ada-impl.adb  ada_be-idl2ada-impl.ads  ada_be-idl2ada-skel.adb  ada_be-idl2ada-skel.ads  ada_be-idl2ada-stream.adb  ada_be-idl2ada-value_impl.adb  ada_be-idl2ada-value_skel.adb  ada_be-idl2ada-value_skel.ads  ada_be-idl2ada.adb  ada_be-idl2ada.ads  ada_be-source_streams.adb  ada_be-source_streams.ads  ada_be-temporaries.ads  ada_be-types.adb  ada_be-types.ads  ada_be.adb  ada_be.ads  ada_be.opt  be_ada.adb  be_ada.ads  configure  configure.in  disp.adb  (+52 more)
src/: ChangeLog  Makefile  Makefile.am  Makefile.common  Makefile.in  ROADMAP  TODO  adabroker-config.in  allsrc.adb  broca-buffers-io_operations.adb  broca-buffers-io_operations.ads  broca-buffers.adb  broca-buffers.ads  broca-cdr-fixed_point.adb  broca-cdr-fixed_point.ads  broca-cdr-refs.adb  broca-cdr-refs.ads  broca-cdr.adb  broca-cdr.ads  broca-configuration.ads  broca-debug.adb  broca-debug.ads  broca-environment.adb  broca-environment.ads  broca-exceptions-stack.adb  broca-exceptions-stack.ads  broca-exceptions.adb  broca-exceptions.ads  broca-flags.adb  broca-flags.ads  broca-giop.adb  broca-giop.ads  broca-iiop.adb  broca-iiop.ads  broca-inet_server.adb  broca-inet_server.ads  broca-iop.adb  broca-iop.ads  broca-ior.adb  broca-ior.ads  (+936 more)
support/: .gitignore  GNUmakefile  Makefile.am  acconfig.h  ada.m4  adacompiler.in  boolsize.cc  cleanup-conf-files  cxxcpp.m4  dir.mk  enable-conditional-debug  gensedfile  gentexifile  gnatsrc.m4  idlcpp.m4  install-sh  kill-process  libtool-tag.m4  linker.in  linker_options  mkdep  native-adacompiler.in  reconfig  run_cpp.ksh  run_in_bg  run_script.adb  scm.m4  ssl.m4  subversion.m4  timed_grep  utils.m4
testsuite/: Makefile.am  Makefile.common  README  polyorb.conf  ssl-cert.conf  testsuite.py
(+6705 files in other folders)
